samples/_failures_safe/1761638034_5edd0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86798f68.c: In function ‘main’:
./samples/SAFE/__tmp_86798f68.c:167:5: error: expected expression at end of input
  167 |     for (size_t i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_86798f68.c:167:5: error: expected declaration or statement at end of input
